openresty/openresty-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openresty-service
spec:
  type: LoadBalancer
  selector:
    app: openresty-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
