openresty/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agg-api-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: agg-api-service
            port:
              number: 9000
